<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_pl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    app:umanoPanelHeight="0dp">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout style="@style/app_common_hor_linearlayout">

            <like.ry.org.likefast.common.CommonImageView
                android:id="@+id/edit_iv_header"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/app_gray_circle" />

            <like.ry.org.likefast.common.CommonButton
                android:id="@+id/edit_btn_header"
                style="@style/app_common_buttom"
                android:layout_marginStart="20dp"
                android:text="@string/edit_header_icon" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_tl_name"
            style="@style/app_common_hor_linearlayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_te_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wx_name"
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_tl_num"
            style="@style/app_common_hor_linearlayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_te_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/like_num"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_tl_talk"
            style="@style/app_common_hor_linearlayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_te_talk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/talk_thing" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            style="@style/app_common_hor_linearlayout"
            android:gravity="center">

            <like.ry.org.likefast.common.CommonButton
                android:id="@+id/edit_btn_crop"
                style="@style/app_common_buttom"
                android:layout_marginStart="20dp"
                android:text="@string/crop" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <like.ry.org.likefast.common.CommonImageView
            android:id="@+id/edit_iv_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
             />

        <like.ry.org.likefast.common.CommonButton
            android:id="@+id/edit_btn_wx_crop"
            style="@style/app_common_buttom"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/share_wx_friends" />
    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>